@@ -121,8 +121,8 @@ extern int origDragX;
 extern int origDragY;
 extern int DragX;
 extern int DragY;
-extern int DragWidth;
-extern int DragHeight;
+extern unsigned int DragWidth;
+extern unsigned int DragHeight;
 extern unsigned int DragBW;
 extern int CurrentDragX;
 extern int CurrentDragY;
