@@ -67,7 +67,7 @@ void InitGnome (void) {
   XChangeProperty (dpy, Scr->Root, _XA_WIN_PROTOCOLS_LIST[1], XA_CARDINAL, 32,
 		   PropModeReplace, (unsigned char *) &(Scr->workSpaceMgr.count), 1);
 
-  if (!Scr->CaptiveRoot)
+  if (!captive)
     XChangeProperty (dpy, Scr->Root, _XA_WIN_PROTOCOLS_LIST[0], XA_CARDINAL, 32,
 		   PropModeReplace, (unsigned char *) &curws, 1);
 
